--- a/templates/login.html
+++ b/templates/login.html
@@ -14,7 +14,7 @@
         </div>
         <div id="main_page" class="main_page">
             <div id="login_box" class="login_box">
-                <img src="{{ url_for('static', filename='banner-light.png') }}" alt="Logo" class="logo_login"><br> <!-- replace banner with template -->
+                <img src="{{ url_for('static', filename='banner-light.png') }}" alt="Logo" class="logo_login"><br> 
                 <form action="/login" method="POST" class="login_form">
                     <div class="login_input_box">
                         <label for="username">Username :</label><br>
