--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -35,7 +35,112 @@
       </ul>
     </div>
     <div id="dashboard_box" class="dashboard_box">
-      hello
+
+      <div class="dashboard_left_box">
+        <div class="disk_usage_box" id="disk_usage_box">
+          <div class="box_title">
+              <h3>Disk Usage</h3>
+          </div>
+          <div class="disk_display_box" id="disk_display_box">
+
+            <div class="disk_box">
+              <div class="disk_title">
+                Anime :
+                <div class="disk_fill_stat">
+                  10mo/10To
+                </div>
+              </div>
+              <div class="progress_bar" id="disk_bar_anime">
+                <div class="progress" id="disk_progress_anime">
+
+                </div>
+              </div>
+            </div>
+
+            <div class="disk_box">
+              <div class="disk_title">
+                Show :
+                <div class="disk_fill_stat">
+                  10mo/10To
+                </div>
+              </div>
+              <div class="progress_bar" id="disk_bar_show">
+                <div class="progress" id="disk_progress_show">
+
+                </div>
+              </div>
+            </div>
+
+            <div class="disk_box">
+              <div class="disk_title">
+                Movie :
+                <div class="disk_fill_stat">
+                  10mo/10To
+                </div>
+              </div>
+              <div class="progress_bar" id="disk_bar_movie">
+                <div class="progress" id="disk_progress_movie">
+
+                </div>
+              </div>
+            </div>
+
+          </div>
+          <div class="disk_stat_anishowmov">
+            <h5>Répartition : </h5>
+            <div class="progress_bar" id="disk_bar_stat">
+
+                <div class="progress" id="disk_progress_stat_anime">
+
+                </div>
+              <div class="progress" id="disk_progress_stat_show">
+
+                </div>
+              <div class="progress" id="disk_progress_stat_movie">
+
+                </div>
+              </div>
+            <ul id="disk_repartion_list">
+              <li class="disk_repartion_item" id="disk_repartion_anime">
+                Anime
+              </li>
+              <li  class="disk_repartion_item" id="disk_repartion_show">
+                Show
+              </li>
+              <li  class="disk_repartion_item" id="disk_repartion_movie">
+                Movie
+              </li>
+
+            </ul>
+          </div>
+        </div>
+
+        <div class="cpu_temp_box" id="cpu_temp_box">
+          <div class="box_title">
+            cpu temp
+          </div>
+          <div class="cpu_temp_display_box">
+            <h4 class="temp_designation">Current :</h4>
+            <div class="cpu_temp" id="cpu_temp_current">
+              33deg
+            </div>
+            <h4 class="temp_designation">Average :</h4>
+            <div class="cpu_temp" id="cpu_temp_avg">
+              36deg
+            </div>
+          </div>
+          <div class="cpu_temp_current">
+            <div></div>
+          </div>
+        </div>
+
+      </div>
+      <div class="dashboard_center_box">
+        center
+      </div>
+      <div class="dashboard_right_box">
+        right
+      </div>
     </div>
 
   </div>
