--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -135,8 +135,72 @@
         </div>
 
       </div>
+
       <div class="dashboard_center_box">
-        center
+        <div class="center_main_box" id="center_main_box">
+            <div class="main_upper_box" id="main_upper_box">
+              <div class="main_log_box">
+                  <div class="box_title">
+                    Logs
+                  </div>
+                <div>
+                  <ul>
+                    <li><a href="#">2022-03-15.log</a> </li>
+                  </ul>
+                </div>
+              </div>
+              <div class="main_schedule_box" id="main_schedule_box">
+                  <div class="box_title">
+                    Schedule
+                  </div>
+                <div class="schedule_box">
+                  <div class="schedule_item_default">
+                    <div class="schedule_poster">
+
+                    </div>
+                    <div class="schedule_desc">
+                      <h5 class="schedule_title">title</h5>
+                      <h5 class="schedule_release_date">Relaese on : 2022-03-15</h5>
+                      <h5 class="schedule_genre">Horror, slice of life</h5>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="main_services_box" id="main_services_box">
+
+                  <div class="box_title">
+                      Services
+                    </div>
+
+                <div class="services_box">
+
+                  <div class="service">
+                    <div class="service_logo">
+
+                    </div>
+                    <div class="service_desc">jellyfin (Netflix-like)</div>
+                  </div>
+
+                  <div class="service">
+                    <div class="service_logo">
+
+                    </div>
+                    <div class="service_desc">Video-converter (based on Handbrake)</div>
+                  </div>
+
+                </div>
+              </div>
+            </div>
+          <div class="main_bottom_box">
+            <div class="main_bottom_stat_box">
+
+            </div>
+            <div class="main_bottom_graph_box"></div>
+          </div>
+        </div>
+        <div class="center_sub_box" id="center_sub_box">
+            kkkkkk
+        </div>
       </div>
       <div class="dashboard_right_box">
         right
