--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -143,9 +143,36 @@
                   <div class="box_title">
                     Logs
                   </div>
-                <div>
-                  <ul>
+                <div class="div_scroll_bar" id="log_box">
+                  <ul class="list_log" id="list_log">
                     <li><a href="#">2022-03-15.log</a> </li>
+                    <li><a href="#">2022-03-15.log</a> </li>
+                    <li><a href="#">2022-03-15.log</a> </li>
+                    <li><a href="#">2022-03-15.log</a> </li>
+                    <li><a href="#">2022-03-15.log</a> </li>
+                    <li><a href="#">2022-03-15.log</a> </li>
+                    <li><a href="#">2022-03-15.log</a> </li>
+                    <li><a href="#">2022-03-15.log</a> </li>
+                    <li><a href="#">2022-03-15.log</a> </li>
+                    <li><a href="#">2022-03-15.log</a> </li>
+                    <li><a href="#">2022-03-15.log</a> </li>
+                    <li><a href="#">2022-03-15.log</a> </li>
+                    <li><a href="#">2022-03-15.log</a> </li>
+                    <li><a href="#">2022-03-15.log</a> </li>
+                    <li><a href="#">2022-03-15.log</a> </li>
+                    <li><a href="#">2022-03-15.log</a> </li>
+                    <li><a href="#">2022-03-15.log</a> </li>
+                    <li><a href="#">2022-03-15.log</a> </li>
+                    <li><a href="#">2022-03-15.log</a> </li>
+                    <li><a href="#">2022-03-15.log</a> </li>
+                    <li><a href="#">2022-03-15.log</a> </li>
+                    <li><a href="#">2022-03-15.log</a> </li>
+                    <li><a href="#">2022-03-15.log</a> </li>
+                    <li><a href="#">2022-03-15.log</a> </li>
+                    <li><a href="#">2022-03-15.log</a> </li>
+                    <li><a href="#">2022-03-15.log</a> </li>
+                    <li><a href="#">2022-03-15.log</a> </li>
+
                   </ul>
                 </div>
               </div>
@@ -153,13 +180,54 @@
                   <div class="box_title">
                     Schedule
                   </div>
-                <div class="schedule_box">
-                  <div class="schedule_item_default">
-                    <div class="schedule_poster">
+                <div class="schedule_box div_scroll_bar">
 
-                    </div>
+                  <div class="schedule_item_default">
+                    <img src="../static/Default_poster.jpg" class="schedule_poster">
+
                     <div class="schedule_desc">
-                      <h5 class="schedule_title">title</h5>
+                      <div class="schedule_title_type">
+                          <h4 class="schedule_title">Oshi no Ko</h4>
+                          <h5 class="schedule_type">Type : Anime</h5>
+                      </div>
+                      <h5 class="schedule_genre">Genre : Horror, slice of life</h5>
+                      <h5 class="schedule_release_date">Relaese on : 2022-03-15</h5>
+                    </div>
+                  </div>
+
+                  <div class="schedule_item_default">
+                    <img src="../static/Default_poster.jpg" class="schedule_poster">
+
+                    <div class="schedule_desc">
+                      <div class="schedule_title_type">
+                          <h4 class="schedule_title">Oshi no Ko</h4>
+                          <h5 class="schedule_type">Type : Anime</h5>
+                      </div>
+                      <h5 class="schedule_genre">Genre : Horror, slice of life</h5>
+                      <h5 class="schedule_release_date">Relaese on : 2022-03-15</h5>
+                    </div>
+                  </div>
+
+                  <div class="schedule_item_default">
+                    <img src="../static/Default_poster.jpg" class="schedule_poster">
+
+                    <div class="schedule_desc">
+                      <div class="schedule_title_type">
+                          <h4 class="schedule_title">Oshi no Ko</h4>
+                          <h5 class="schedule_type">Type : Anime</h5>
+                      </div>
+                      <h5 class="schedule_genre">Genre : Horror, slice of life</h5>
+                      <h5 class="schedule_release_date">Relaese on : 2022-03-15</h5>
+                    </div>
+                  </div>
+
+                  <div class="schedule_item_default">
+                    <img src="../static/Default_poster.jpg" class="schedule_poster">
+                    <div class="schedule_desc">
+                      <div class="schedule_title_type">
+                          <h4 class="schedule_title">Oshi no Ko</h4>
+                          <h5 class="schedule_type">Type : Anime</h5>
+                      </div>
                       <h5 class="schedule_release_date">Relaese on : 2022-03-15</h5>
                       <h5 class="schedule_genre">Horror, slice of life</h5>
                     </div>
@@ -175,27 +243,51 @@
                 <div class="services_box">
 
                   <div class="service">
-                    <div class="service_logo">
+                    <img src="../static/link_logo_default.jpg" class="service_logo">
 
-                    </div>
                     <div class="service_desc">jellyfin (Netflix-like)</div>
                   </div>
 
                   <div class="service">
-                    <div class="service_logo">
-
-                    </div>
+                    <img src="../static/link_logo_default.jpg" class="service_logo">
                     <div class="service_desc">Video-converter (based on Handbrake)</div>
                   </div>
 
                 </div>
+
+                <div class="box_title" id="links_title">
+                      Links
+                    </div>
+                <div class="service">
+                    <img src="../static/link_logo_default.jpg" class="service_logo">
+                    <div class="service_desc">Video-converter (based on Handbrake)</div>
+                  </div>
+                <div class="service">
+                    <img src="../static/link_logo_default.jpg" class="service_logo">
+                  <div class="service_desc">
+                    <a href="#">Github</a>
+                  </div>
+                  </div>
+
               </div>
             </div>
           <div class="main_bottom_box">
             <div class="main_bottom_stat_box">
-
+                <h5 class="nb" id="nb_show">Number of show : 450</h5>
+                <h5 class="nb" id="nb_anime">Number of Anime : 450</h5>
+                <h5 class="nb" id="nb_movie">Number of Movie : 450</h5>
             </div>
-            <div class="main_bottom_graph_box"></div>
+            <div class="main_bottom_graph_box">
+                <div class="chart" id="chart_show">
+                    <div class="sector" id="completed_show"></div>
+                    <div class="sector" id="uncompleted_show"></div>
+                </div>
+
+              <div class="chart" id="chart_Anime">
+                    <div class="sector" id="completed_anime"></div>
+                    <div class="sector" id="uncompleted_anime"></div>
+                </div>
+            </div>
           </div>
         </div>
         <div class="center_sub_box" id="center_sub_box">
